--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>To Do List</title>
   </head>
   <body>
-    <h1>It's a weekday!</h1>
-    <p>Why are you not working!</p>
-
-
+    <h1>It's just a Html body!</h1>
+    <p>And jus a paragraph!</p>
   </body>
 </html>
